# malaysia-poverty-monitor

./: .gitattributes  .gitignore  DATA_DICTIONARY.md  DATA_LICENSES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: malaysia.yaml
dashboard_stakeholder/: README.md  __init__.py  app.py  callbacks.py  charts.py  data.py  layout.py  requirements.txt
data/: state_model_predictions.csv  state_year_panel_modelready_2002_2022.csv
data/interim/: dosm_poverty_state_clean.csv
data/provenance/: malaysia_dosm_poverty_provenance.json  source_provenance_notes.md
notebooks/: 00_dosm_raw_to_labels.ipynb  01_malaysia_data_preparation.ipynb  02_malaysia_spatial_features.ipynb  03_model_training_evaluation.ipynb  04_dashboard_artifacts.ipynb
outputs/metrics/: malaysia_state_loso_fold_predictions.csv  malaysia_state_model_comparison.csv  malaysia_state_rf_shap_poverty_absolute.csv  malaysia_state_selected_model_loso_metrics.json  malaysia_state_temporal_backtest.csv  malaysia_state_uncertainty_intervals.csv
outputs/qa/: dashboard_artifact_contract.json  dosm_raw_lineage_validation.json  malaysia_data_preparation_summary.json  malaysia_model_training_notebook_summary.json  malaysia_spatial_feature_summary.json  malaysia_state_benchmark_summary.json  malaysia_state_model_promotion.json  malaysia_state_rf_continuity_benchmark.md  malaysia_state_rf_shap_summary.json  (+2 more)
scripts/: capture_dashboard.cjs  run_notebooks.py  verify_lineage.py
setup/: RUN_GUIDE.md  local_reproducibility_config.example.env
tests/: test_dashboard.py  test_repository.py
